--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body style="margin:0; display:flex; justify-content:center; align-items:center; height:100vh;">
   <video controls width="100%">
-    <source src="2-minutes-guided-meditation-english" type="video/mp4">
-    Your browser does not support the video tag.
+   <source src="2%20minute%20guided%20meditation%20english.mp4" type="video/mp4">
+Your browser does not support the video tag.
   </video>
 </body>
 </html>
